--- a/ar_zed_wrapper/package.xml
+++ b/ar_zed_wrapper/package.xml
@@ -15,6 +15,8 @@
     <depend>zed_components</depend>
     <depend>std_msgs</depend>
 
+    <depend>ar_zed_msgs</depend>
+
     <test_depend>ament_lint_auto</test_depend>
     <test_depend>ament_lint_common</test_depend>
 
